added weather icon

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,16 @@
 <header class="header">
-	<div class="header__content _container">
-
-	</div>
+  <div class="header__content">
+    <div class="header__items">
+      <div class="header__search">
+        <form action="http://www.google.com/search" method="get">
+          <input type="text" name="q">
+        </form>
+      </div>
+      <div class="header__weather">
+        <div class="weather-icon"><img src="img/icons/unknown.png"></div>
+        <span class="js-city city"></span>
+        <span class="js-temp temp"></span>
+      </div>
+    </div>
+  </div>
 </header>
