--- a/#src/_header.html
+++ b/#src/_header.html
@@ -7,7 +7,7 @@
         </form>
       </div>
       <div class="header__weather">
-        <div class="weather-icon"><img src="img/icons/unknown.png"></div>
+        <div class="weather-icon"><img src="img/icons/unknown.webp"></div>
         <span class="js-city city"></span>
         <span class="js-temp temp"></span>
       </div>
