Fix for main!!!!

--- a/#src/index.html
+++ b/#src/index.html
@@ -15,17 +15,24 @@
             <h1 class="main__clock-h1">00:00</h1>
           </div>
           <form action="" class="js-form main__form">
+            <h2 class="main__form">Введи свое имя</h2>
             <input class="main__form-input" type="text" placeholder="Как тебя зовут?">
           </form>
           <h2 class="js-greetings main__greetings"></h2>
         </div>
         <div class="content__bot">
+          <h3 class="bot__focus">На чем вы сосредоточены сегодня?</h3>
+          <form action="" class="js-form-focus bot__form-focus">
+            <input class="bot__focus-input" type="text">
+          </form>
+          <h2 class="js-focus-li bot__focus-li"></h2>
+        </div>
+        <!-- <div class="content__toDo">
           <form action="" class="js-toDo bot__toDo">
             <input class="bot__toDo-input" type="text" placeholder="Твой ToDo">
           </form>
           <ul class="js-toDoList bot__toDo-ul"></ul>
-        </div>
-
+        </div> -->
       </div>
     </main>
     @@include('_footer.html',{})
