add hover for TODO

--- a/#src/index.html
+++ b/#src/index.html
@@ -15,8 +15,8 @@
             <h1 class="main__clock-h1">00:00</h1>
           </div>
           <form action="" class="js-form main__form">
-            <h2 class="main__form">Введи свое имя</h2>
-            <input class="main__form-input" type="text" placeholder="Как тебя зовут?">
+            <h2 class="main__form-h2">Введи свое имя</h2>
+            <input class="main__form-input" type="text">
           </form>
           <h2 class="js-greetings main__greetings"></h2>
         </div>
@@ -25,7 +25,11 @@
           <form action="" class="js-form-focus bot__form-focus">
             <input class="bot__focus-input" type="text">
           </form>
-          <h2 class="js-focus-li bot__focus-li"></h2>
+          <div class="bot__focus-div">
+            <i class="js-chec _icon-checkbox-unchecked bot__focus-icon"></i>
+            <h2 class="js-focus-li bot__focus-li"></h2>
+          </div>
+
         </div>
         <!-- <div class="content__toDo">
           <form action="" class="js-toDo bot__toDo">
