--- a/#src/index.html
+++ b/#src/index.html
@@ -28,6 +28,7 @@
           <div class="bot__focus-div">
             <i class="js-chec _icon-checkbox-unchecked bot__focus-icon"></i>
             <h2 class="js-focus-li bot__focus-li"></h2>
+            <span class="js-delChec bot__focus-del-chec">x</span>
           </div>
 
         </div>
