add button for tablet & moobile send focus

--- a/#src/index.html
+++ b/#src/index.html
@@ -24,6 +24,7 @@
           <h3 class="bot__focus">На чем вы сосредоточены сегодня?</h3>
           <form action="" class="js-form-focus bot__form-focus">
             <input class="bot__focus-input" type="text">
+            <button class="_icon-plus bot__focus-plus"></button>
           </form>
           <div class="bot__focus-div">
             <i class="js-chec _icon-checkbox-unchecked bot__focus-icon"></i>
