--- a/#src/index.html
+++ b/#src/index.html
@@ -33,12 +33,23 @@
           </div>
 
         </div>
-        <!-- <div class="content__toDo">
-          <form action="" class="js-toDo bot__toDo">
-            <input class="bot__toDo-input" type="text" placeholder="Твой ToDo">
-          </form>
+
+      </div>
+
+      <div class="todo__app">
+
+        <div class="todo__header">
+          <div class="todo__header-head">Today</div>
+        </div>
+        <div class="todo__content">
+          <div action="" class="content__send-btn">
+            <button class="js-toDoBtn content__todo-btn">New Todo</button>
+          </div>
           <ul class="js-toDoList bot__toDo-ul"></ul>
-        </div> -->
+          <form action="" class="js-toDo bot__toDo">
+            <input class="content__todo-input" type="text" placeholder="Твой ToDo">
+          </form>
+        </div>
       </div>
     </main>
     @@include('_footer.html',{})
