--- a/#src/index.html
+++ b/#src/index.html
@@ -21,7 +21,7 @@
           <h2 class="js-greetings main__greetings"></h2>
         </div>
         <div class="content__bot">
-          <h3 class="bot__focus">На чем вы сосредоточены сегодня?</h3>
+          <h3 class="bot__focus">На чем Вы сосредоточены сегодня?</h3>
           <form action="" class="js-form-focus bot__form-focus">
             <input class="bot__focus-input" type="text">
             <button class="_icon-plus bot__focus-plus"></button>
@@ -36,15 +36,13 @@
 
       </div>
 
-      <div class="todo__app">
+      <div class="todo__app" id="todo__app">
 
         <div class="todo__header">
-          <div class="todo__header-head">Today</div>
+          <div class="todo__header-head">Сегодня</div>
+          <button class="js-toDoBtn content__todo-btn">Новое задание</button>
         </div>
         <div class="todo__content">
-          <div action="" class="content__send-btn">
-            <button class="js-toDoBtn content__todo-btn">New Todo</button>
-          </div>
           <ul class="js-toDoList bot__toDo-ul"></ul>
           <form action="" class="js-toDo bot__toDo">
             <input class="content__todo-input" type="text" placeholder="Твой ToDo">
