--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="footer__content _container">
-    <div class="js-todoFooter todo__head">ToDo</div>
+  <div class="footer__content">
+    <div id="pusk" class="js-todoFooter todo__head">ToDo</div>
   </div>
 </footer>
