--- a/#src/index.html
+++ b/#src/index.html
@@ -15,13 +15,13 @@
             <h1 class="main__clock-h1">00:00</h1>
           </div>
           <form action="" class="js-form main__form">
-            <h2 class="main__form-h2">Введи свое имя</h2>
+            <h2 class="main__form-h2">Як до вас звертатися?</h2>
             <input class="main__form-input" type="text">
           </form>
           <h2 class="js-greetings main__greetings"></h2>
         </div>
         <div class="content__bot">
-          <h3 class="bot__focus">На чем Вы сосредоточены сегодня?</h3>
+          <h3 class="bot__focus">Що Ви хочете сьогодні досягти?</h3>
           <form action="" class="js-form-focus bot__form-focus">
             <input class="bot__focus-input" type="text">
             <button class="_icon-plus bot__focus-plus"></button>
@@ -39,13 +39,13 @@
       <div class="todo__app" id="todo__app">
 
         <div class="todo__header">
-          <div class="todo__header-head">Сегодня</div>
-          <button class="js-toDoBtn content__todo-btn">Новое задание</button>
+          <span class="todo__header-head js-toDoDate"></span>
+          <button class="js-toDoBtn content__todo-btn">Нове завдання</button>
         </div>
         <div class="todo__content">
           <ul class="js-toDoList bot__toDo-ul"></ul>
           <form action="" class="js-toDo bot__toDo">
-            <input class="content__todo-input" type="text" placeholder="Твой ToDo">
+            <input class="content__todo-input" type="text" placeholder="Напиши завдання на сьогодні">
           </form>
         </div>
       </div>
