--- a/#src/index.html
+++ b/#src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('_head.html',{
-"title":"Главная"
+"title":"Main"
 })
 
 <body>
@@ -15,13 +15,13 @@
             <h1 class="main__clock-h1">00:00</h1>
           </div>
           <form action="" class="js-form main__form">
-            <h2 class="main__form-h2">Як до вас звертатися?</h2>
+            <h2 class="main__form-h2">What is your name?</h2>
             <input class="main__form-input" type="text">
           </form>
           <h2 class="js-greetings main__greetings"></h2>
         </div>
         <div class="content__bot">
-          <h3 class="bot__focus">Що Ви хочете сьогодні досягти?</h3>
+          <h3 class="bot__focus">What do you want to achieve today?</h3>
           <form action="" class="js-form-focus bot__form-focus">
             <input class="bot__focus-input" type="text">
             <button class="_icon-plus bot__focus-plus"></button>
@@ -40,7 +40,7 @@
 
         <div class="todo__header">
           <span class="todo__header-head js-toDoDate"></span>
-          <button class="js-toDoBtn content__todo-btn">Нове завдання</button>
+          <button class="js-toDoBtn content__todo-btn">New task</button>
         </div>
         <div class="todo__content">
           <ul class="js-toDoList bot__toDo-ul"></ul>
